cluster/apps/default/openeats/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: openeats
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: openeats
      app.kubernetes.io/component: api
  template:
    metadata:
      labels:
        app.kubernetes.io/name: openeats
        app.kubernetes.io/component: api
    spec:
      containers:
        - name: api
          image: openeats/openeats-api
          args:
            - "/startup/prod-entrypoint.sh"
          volumeMounts:
            - mountPath: /code/static-files
              name: static-files
            - mountPath: /code/site-media
              name: site-media
          ports:
            - containerPort: 8000
      volumes:
        - name: static-files
          persistentVolumeClaim:
            claimName: static-files
        - name: site-media
          persistentVolumeClaim:
            claimName: site-media
      nodeSelector:
        kubernetes.io/arch: amd64
