cluster/apps/default/openeats/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: openeats
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: openeats
      app.kubernetes.io/component: nginx
  template:
    metadata:
      labels:
        app.kubernetes.io/name: openeats
        app.kubernetes.io/component: nginx
    spec:
      containers:
        - name: nginx
          image: openeats/openeats-nginx
          args:
            - "./start.sh"
          volumeMounts:
            - mountPath: /var/www/html/openeats-static/static-files
              name: static-files
            - mountPath: /var/www/html/openeats-static/site-media
              name: site-media
            - mountPath: /var/www/html/openeats-static/public-ui
              name: public-ui
          ports:
            - containerPort: 80
      nodeSelector:
        kubernetes.io/arch: amd64
      volumes:
        - name: static-files
          persistentVolumeClaim:
            claimName: static-files
        - name: site-media
          persistentVolumeClaim:
            claimName: site-media
        - name: public-ui
          persistentVolumeClaim:
            claimName: public-ui
