cluster/apps/default/openeats/api-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: openeats
spec:
  selector:
    app.kubernetes.io/name: openeats
    app.kubernetes.io/component: api
  ports:
    - port: 8000
