cluster/apps/default/openeats/mariadb-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: openeats
spec:
  selector:
    app.kubernetes.io/name: openeats
    app.kubernetes.io/component: mariadb
  ports:
  - port: 3306
