cluster/apps/default/openeats/nginx-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: openeats
spec:
  selector:
    app.kubernetes.io/name: openeats
    app.kubernetes.io/component: nginx
  ports:
    - port: 80
